# mytest

./: CMakeLists.txt  main.cpp  tags  接口设计.md
circle/: circle.sln
circle/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  main.cpp  process.cpp  process.h
circle/ConsoleApplication1/x64/Debug/: vc140.idb
circle/ConsoleApplication1/x64/Debug/ConsoleA.7DD386B8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
circle/x64/Debug/: ConsoleApplication1.ilk
code/: .ycm_extra_conf.py  alg.cpp  build.sh  process.cpp  process.h  tags
code/include/: process.h
